--- a/app/build.gradle
+++ b/app/build.gradle
@@ -65,12 +65,13 @@ dependencies {
 
     // Dagger
     implementation "com.google.dagger:dagger:$dagger_version"
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     kapt "com.google.dagger:dagger-compiler:$dagger_version"
 
     // Database
     implementation "androidx.room:room-runtime:$room_version"
     kapt "androidx.room:room-compiler:$room_version"
-    implementation "androidx.room:room-rxjava2:$room_version"
+    implementation "androidx.room:room-ktx:$room_version"
 
     //Charts
     implementation "com.github.PhilJay:MPAndroidChart:$chart_version"
@@ -81,6 +82,7 @@ dependencies {
     kaptTest "com.google.dagger:dagger-compiler:$dagger_version"
     testImplementation "android.arch.core:core-testing:$core_testing_version"
     testImplementation "org.hamcrest:hamcrest-library:$hamcrest_version"
+    testImplementation "androidx.room:room-testing:$room_version"
 
     // UI Testing
     androidTestImplementation "androidx.test:runner:$test_runner_version"
