--- a/app/build.gradle
+++ b/app/build.gradle
@@ -73,6 +73,9 @@ dependencies {
     kapt "androidx.room:room-compiler:$room_version"
     implementation "androidx.room:room-ktx:$room_version"
 
+    //Worker
+    implementation "androidx.work:work-runtime-ktx:$work_version"
+
     //Charts
     implementation "com.github.PhilJay:MPAndroidChart:$chart_version"
 
@@ -91,6 +94,7 @@ dependencies {
     androidTestImplementation "androidx.test.espresso:espresso-intents:$espresso_version"
     androidTestImplementation "org.mockito:mockito-core:$mockito_version"
     kaptAndroidTest "com.google.dagger:dagger-compiler:$dagger_version"
+    androidTestImplementation "androidx.work:work-testing:$work_version"
 
 
 }
