--- a/build.gradle
+++ b/build.gradle
@@ -50,6 +50,9 @@ ext {
     // DB
     room_version = '2.2.5'
 
+    //worker
+    work_version = "2.3.4"
+
     // Dagger
     dagger_version = '2.27'
 
