--- a/build.gradle
+++ b/build.gradle
@@ -6,7 +6,7 @@ buildscript {
         jcenter()
     }
     dependencies {
-        classpath "com.android.tools.build:gradle:4.0.0"
+        classpath 'com.android.tools.build:gradle:4.1.3'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
 
         // NOTE: Do not place your application dependencies here; they belong
@@ -31,8 +31,8 @@ ext {
     // Sdk and Tools
     min_sdk_version = 23
     target_sdk_version = 29
-    compile_sdk_version = 29
-    build_tools_version = '29.0.3'
+    compile_sdk_version = 30
+    build_tools_version = '30.0.3'
 
     // Core
     app_compat_version = '1.1.0'
